# osgpy

./: README.md  pyproject.toml  requirements.txt  setup.py
data/: perf-example.counts
osg/: __init__.py  dataref.py  flamegraph.py  pandas.py
src/osg/: flamegraph.py  pandas.py  plot.py
tests/: test_dataref.py  test_flamegraph_utils.py  test_pandas_utils.py  test_plot_utils.py
